--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "skipLibCheck": false,
     "paths": {
       "@/*": ["./src/*"]
-    }
-  },
-  "types": ["node", "vite", "vitest"]
+    },
+    "types": ["node", "vite/client", "vitest/globals"]
+  }
 }
