--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^17.1.8",
     "sass": "^1.85.1",
+    "type-fest": "^4.37.0",
     "typescript": "^5.8.2",
     "vite": "^6.2.0",
     "vite-plugin-vue-devtools": "^7.7.2",
