--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "modern-normalize": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
